--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".UpcomingProductDetails"></activity>
+        <activity android:name=".ImageSlider"></activity>
+        <activity android:name=".UpcomingProductDetails" />
         <activity android:name=".AllUpcomingProducts" />
         <activity android:name=".ProductDetails" />
         <activity android:name=".MainActivity" />
