--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity android:name=".ImageSlider"></activity>
         <activity android:name=".UpcomingProductDetails" />
         <activity android:name=".AllUpcomingProducts" />
-        <activity android:name=".ProductDetails" />
+        <activity android:name=".AvailableProductDetails" />
         <activity android:name=".MainActivity" />
         <activity
             android:name=".SplashScreen"
