--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,14 +13,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ImageSlider"></activity>
-        <activity android:name=".UpcomingProductDetails" />
-        <activity android:name=".AllUpcomingProducts" />
-        <activity android:name=".AvailableProductDetails" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".ImageSlider"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".UpcomingProductDetails"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".AllUpcomingProducts"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".AvailableProductDetails"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".SplashScreen"
-            android:theme="@style/AppFullScreenTheme">
+            android:theme="@style/AppFullScreenTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
